[package]
name = "lasrs"
version = "0.1.1"
authors = ["iykekings <iykekings36@gmail.com>"]
edition = "2018"
readme="README.md"
description = "A library for parsing geophysical well log (.las) files"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.7"
lazy_static = "1.4.0"
